--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -14,4 +14,29 @@
     background: #fff;
     @include easeOut;
   }
+
+  // Rotate into X with Menu Lines
+  &.close {
+    transform: rotate(180deg);
+    .btn-line {
+      // Line 1 - Rotate
+      &:nth-child(1) {
+        transform: rotate(45deg) translate(5px, 5px);
+        background: $secondary-color;
+        @include easeOut();
+      }
+
+      // Line 2 - Hide
+      &:nth-child(2) {
+        opacity: 0;
+        @include easeOut();
+      }
+      // Line 3 - Rotate
+      &:nth-child(3) {
+        transform: rotate(-45deg) translate(7px, -6px);
+        background: $secondary-color;
+        @include easeOut();
+      }
+    }
+  }
 }
