--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,6 +1,6 @@
 $primary-color: #444;
-// $secondary-color: #eece1a;
 $secondary-color: #00e2ff;
+$tertiary-color: #eece1a;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
 $background-opacity: 0.8;
