--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -46,7 +46,6 @@
   position: fixed;
   top: 0;
   width: 100%;
-  opacity: 0.9;
   visibility: hidden;
 
   &.show {
@@ -66,6 +65,7 @@
   }
 
   &-nav {
+    background: rgba(darken($primary-color, 5), 0.9);
     margin: 0;
     padding: 0;
     background: darken($primary-color, 5);
@@ -81,7 +81,7 @@
 
   // Branding side
   &-branding {
-    background: $primary-color;
+    background: rgba($primary-color, 0.9);
     transform: translate3d(0, 100%, 0);
     @include easeOut();
 
@@ -89,13 +89,51 @@
       // Slide in from bottom
       transform: translate3d(0, 0, 0);
     }
+
+    .portrait {
+      width: 250px;
+      height: 250px;
+      background: url('../img/portrait.jpg');
+      border-radius: 50%;
+      border: solid 3px $secondary-color;
+    }
+  }
+
+  // Menu options
+  .nav-item {
+    transform: translate3d(600px, 0, 0);
+    @include easeOut();
+
+    &.show {
+      // Slide in from right
+      transform: translate3d(0, 0, 0);
+    }
+
+    &.current > a {
+      color: $secondary-color;
+    }
+  }
+
+  .nav-link {
+    display: inline-block;
+    position: relative;
+    font-size: 30px;
+    text-transform: uppercase;
+    padding: 1rem 0;
+    font-weight: 300;
+    color: #fff;
+    text-decoration: none;
+    @include easeOut();
+
+    &:hover {
+      color: $secondary-color;
+    }
   }
 }
 
-// Menu options
-.nav-link {
-  &:hover {
-    color: $secondary-color;
-    @include easeOut();
+// DElay each nav item slide by 0.1s
+@for $x from 1 through 4 {
+  .nav-item:nth-child(#{$x}) {
+    transition-delay: $x * 0.1s;
   }
 }
