--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -131,7 +131,7 @@
   }
 }
 
-// DElay each nav item slide by 0.1s
+// Delay each nav item slide by 0.1s
 @for $x from 1 through 4 {
   .nav-item:nth-child(#{$x}) {
     transition-delay: $x * 0.1s;
