set text color function created

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,7 +9,7 @@
 body {
   @include background;
   background: $primary-color;
-  color: #fff;
+  color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -59,6 +59,8 @@ main {
 
     a {
       padding: 0.4rem;
+      // Test
+      color: set-text-color($primary-color);
 
       &:hover {
         color: $secondary-color;
