--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -37,6 +37,15 @@ $background-opacity: 0.8;
   }
 }
 
+// Set text color
+@function set-text-color($color) {
+  @if (lightness($color) > 40) {
+    @return #000;
+  } @else {
+    @return #fff;
+  }
+}
+
 @mixin mediaMd {
   @media screen and (max-width: 768px) {
     @content;
