about page and resposivnesss

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -15,6 +15,11 @@
     h1 {
       font-size: 5rem;
     }
+
+    .lg-heading {
+      line-height: 1;
+      margin-bottom: 1rem;
+    }
   }
 
   ul.menu-nav,
@@ -47,9 +52,15 @@
     }
   }
 
-  .lg-heading {
-    line-height: 1;
-    margin-bottom: 1rem;
+  .about-info {
+    grid-template-areas:
+      'bioimage'
+      'bio'
+      'job1'
+      'job2'
+      'job3';
+
+    grid-template-columns: 1fr;
   }
 }
 
