--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,9 +1,15 @@
 // Widescreens
 @include mediaXl {
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 // Desktops and Laptops
 @include mediaLg {
+  .projects {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 // Tablets
@@ -62,6 +68,10 @@
 
     grid-template-columns: 1fr;
   }
+
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 // Smartphones
@@ -69,5 +79,9 @@
   main#home h1 {
     margin-top: 10vh;
     font-size: 4rem;
+  }
+
+  .projects {
+    grid-template-columns: 1fr;
   }
 }
